--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.3.3",
     "readline-sync": "^1.4.9",
     "ws": "^6.1.2"
   }
