--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Basic Stream Deck hardware emulator",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "colors": "^1.3.3",
+    "dotenv": "^6.2.0",
     "readline-sync": "^1.4.9",
     "ws": "^6.1.2"
   }
