--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.3.3",
+    "chalk": "^2.4.2",
     "dotenv": "^6.2.0",
+    "lodash": "^4.17.11",
     "readline-sync": "^1.4.9",
+    "structured-cli": "^1.0.5",
+    "update-notifier": "^2.5.0",
     "ws": "^6.1.2"
   }
 }
