adding bin section to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Basic Stream Deck hardware emulator",
   "main": "index.js",
+  "bin": {
+    "sde": "./bin/sde"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
