--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "cross-spawn": "^6.0.5",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "readline-sync": "^1.4.9",
