emulator updates for 4.1 - server will now send out didReceiveSettings, didReceiveGlobalSettings, and receive setGlobalSettings, getGlobalSettings, and getSettings - setSettings will now also message back with a didReceiveSettings event

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-BUILD_PATH=C:\\SourceCode\\Fritz\\StreamDeckToolkit\\src\\SamplePlugin\\bin\\Debug\\netcoreapp2.2\\win10-x64
+BUILD_PATH=C:\\SourceCode\\Fritz\\StreamDeckToolkit\\src\\SamplePlugin\\bin\\Debug\\netcoreapp2.2\\winx64
 WINEXE_NAME=SamplePlugin.exe
 OSXEXE_NAME=SamplePlugin
 
